# faster-whisper-stt

./: .gitignore  README.md  SKILL.md  pyproject.toml  server.py
scripts/: transcribe.py
