[project]
name = "faster-whisper-stt"
version = "0.1.0"
description = "Local speech-to-text using Faster-Whisper with CTranslate2"
readme = "SKILL.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
transcribe = "scripts.transcribe:main"
stt-server = "server:main"
